Center background image for header

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ tr {
 /* Header */
 .header {
   /* Fake a dark overlay with a gradient. Black is black... I want my sanity back... */
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/images/background.jpg');
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/images/background.jpg') no-repeat center center;
   background-size: cover;
   min-height: 100vh;
   padding: 0;
